# Hygeia-Graph

./: .dockerignore  .gitignore  CITATION.bib  CITATION.cff  Dockerfile  PLAN.md  README.md  TEST_REPORT.md  app.py  packages.txt  pyproject.toml  requirements.txt  run_local.bat
assets/: README.md  example_data.csv  example_easy.csv  example_hard.csv  example_medium.csv  example_model_spec.json  example_schema.json
contracts/: model_spec.json  results.json  schema.json
docs/: METHODS.md  QA_CHECKLIST.md  TROUBLESHOOTING.md
r/: install.R  run_bootnet.R  run_bridge_networktools.R  run_intervention_v2.R  run_lasso_select.R  run_mgm.R  run_publication_pack.R  run_temporal_var.R
reports/: DESCRIPTIVES_REPORT_FEATURE.md  EXAMPLE_DATASETS_REPORT.md  FEATURE_SUMMARY.md  HEAVY_GUARDRAILS_REPORT.md  MINI_PATCH_AGENT_A_REPORT.md  NEXT_STEP_BOOTNET_REPORT.md  NEXT_STEP_INSIGHTS_REPORT.md  NEXT_STEP_INTERVENTION_SIM_REPORT.md  NEXT_STEP_LASSO_REPORT.md  NEXT_STEP_PUBLICATION_PACK_REPORT.md  RELIABILITY_GUARDRAILS_REPORT.md  SPRINT_A_AGENT_A_REPORT.md  SPRINT_A_AGENT_B_REPORT.md  SPRINT_A_AGENT_C_REPORT.md  SPRINT_B_AGENT_D_REPORT.md  STEP10_REPORT.md  STEP1_REPORT.md  STEP2_REPORT.md  STEP3_REPORT.md  STEP4_REPORT.md  STEP5_REPORT.md  STEP6_REPORT.md  STEP7_REPORT.md  STEP8_REPORT.md  STEP9_REPORT.md  TEMPORAL_NETWORK_REPORT.md  UI_UPDATE_REPORT.md  UX_GUIDANCE_REPORT.md  V2_LONGITUDINAL_FLOW_REPORT.md  WORKFLOW_PRIVACY_REPORT.md
scripts/: e2e_smoke.py
tests/: test_app.py  test_bootnet_robustness_integration.py  test_bootnet_robustness_unit.py  test_bridge_canonical_unit.py  (+34 more)
(+54 files in other folders)
